--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "animate.css": "^4.1.1",
     "firebase": "^8.2.11-202121002818",
     "formik": "^2.2.9",
     "react": "^18.2.0",
