--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=no-future-c6f84.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=312683072992
 REACT_APP_FIREBASE_APP_ID=1:312683072992:web:b587da428536de3b00ef85
 REACT_APP_FIREBASE_MEASURMENT_ID=G-ZXM808NVTY
+
+REACT_APP_ADMIN_EMAIL=hI3bTPIAz9OxtKNGN
+REACT_APP_FORMIK_SERVICE_ID=service_nzx09yi
+REACT_APP_FORMIK_TEMPLATE_ID=template_w2lq68p
