--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
@@ -16,6 +17,7 @@
     "@types/react-dom": "^18.0.9",
     "animate.css": "^4.1.1",
     "emailjs": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "firebase": "^8.2.11-202121002818",
     "formik": "^2.2.9",
     "react": "^18.2.0",
