--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=312683072992
 REACT_APP_FIREBASE_APP_ID=1:312683072992:web:b587da428536de3b00ef85
 REACT_APP_FIREBASE_MEASURMENT_ID=G-ZXM808NVTY
 
-REACT_APP_USER_ID=hI3bTPIAz9OxtKNGN
-REACT_APP_SERVICE_ID=service_nzx09yi
-REACT_APP_TEMPLATE_ID=template_w2lq68p
+REACT_APP_SERVICE_ID='service_nzx09yi'
+REACT_APP_TEMPLATE_ID='template_w2lq68p'
+REACT_APP_USER_ID='hI3bTPIAz9OxtKNGN'
