--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "animate.css": "^4.1.1",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
-    "firebase": "^8.2.11-202121002818",
+    "firebase": "^9.15.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
