--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "typescript": "^4.8.4",
