making a product page

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ REACT_APP_FIREBASE_MEASURMENT_ID=G-ZXM808NVTY
 REACT_APP_SERVICE_ID='service_nzx09yi'
 REACT_APP_TEMPLATE_ID='template_w2lq68p'
 REACT_APP_USER_ID='hI3bTPIAz9OxtKNGN'
+
+REACT_APP_ADMIN_ID='jy6iCijkMaNrqylGPX0duigrPrf1'
