--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "animate.css": "^4.1.1",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
+    "framer-motion": "^8.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.4.5",
-    "react-toggle-dark-mode": "^1.1.1",
     "react-scripts": "5.0.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
